tests/parser/should_pass/timed_sections.csp
Timed (f) {
    P = a -> b -> P

    Q = x

    channel y

    Timed (y) {
        P = maosfklas
    }
}
