tests/parser/should_fail/let_timed_channel.csp
P =
    let
        Timed (\ _ @ 1) {
            channel c
        }
    within P
